@@ -46,12 +46,12 @@ public class SearchGroupShardResponseProcessor implements ShardResponseProcessor
     String[] fields = rb.getGroupingSpec().getFields();
 
     Map<String, List<Collection<SearchGroup<BytesRef>>>> commandSearchGroups = new HashMap<String, List<Collection<SearchGroup<BytesRef>>>>();
-    Map<String, Map<SearchGroup<BytesRef>, String>> tempSearchGroupToShard = new HashMap<String, Map<SearchGroup<BytesRef>, String>>();
+    Map<String, Map<SearchGroup<BytesRef>, Set<String>>> tempSearchGroupToShards = new HashMap<String, Map<SearchGroup<BytesRef>, Set<String>>>();
     for (String field : fields) {
       commandSearchGroups.put(field, new ArrayList<Collection<SearchGroup<BytesRef>>>(shardRequest.responses.size()));
-      tempSearchGroupToShard.put(field, new HashMap<SearchGroup<BytesRef>, String>());
-      if (!rb.searchGroupToShard.containsKey(field)) {
-        rb.searchGroupToShard.put(field, new HashMap<SearchGroup<BytesRef>, String>());
+      tempSearchGroupToShards.put(field, new HashMap<SearchGroup<BytesRef>, Set<String>>());
+      if (!rb.searchGroupToShards.containsKey(field)) {
+        rb.searchGroupToShards.put(field, new HashMap<SearchGroup<BytesRef>, Set<String>>());
       }
     }
 
@@ -69,7 +69,13 @@ public class SearchGroupShardResponseProcessor implements ShardResponseProcessor
 
           commandSearchGroups.get(field).add(searchGroups);
           for (SearchGroup<BytesRef> searchGroup : searchGroups) {
-            tempSearchGroupToShard.get(field).put(searchGroup, srsp.getShard());
+            Map<SearchGroup<BytesRef>, java.util.Set<String>> map = tempSearchGroupToShards.get(field);
+            Set<String> shards = map.get(searchGroup);
+            if (shards == null) {
+              shards = new HashSet<String>();
+              map.put(searchGroup, shards);
+            }
+            shards.add(srsp.getShard());
           }
         }
       }
@@ -82,7 +88,7 @@ public class SearchGroupShardResponseProcessor implements ShardResponseProcessor
 
         rb.mergedSearchGroups.put(groupField, mergedTopGroups);
         for (SearchGroup<BytesRef> mergedTopGroup : mergedTopGroups) {
-          rb.searchGroupToShard.get(groupField).put(mergedTopGroup, tempSearchGroupToShard.get(groupField).get(mergedTopGroup));
+          rb.searchGroupToShards.get(groupField).put(mergedTopGroup, tempSearchGroupToShards.get(groupField).get(mergedTopGroup));
         }
       }
     } catch (IOException e) {
